architecture-ide/tests/fixtures/negative/C4_concept_has_sync_section.concept
concept Counter

  purpose
    count things

  state
    total: int

  actions
    inc [ ] => [ total: int ]

  operational principle
    after inc [ ] => [ total: 1 ]

  sync
    when inc then log
